applications/nestos/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nestos-ingress
  namespace: nestos
spec:
  tls:
    - hosts:
      - nestos.openeuler.org
      secretName: openeuler-org-tls
  rules:
    - host: nestos.openeuler.org
      http:
        paths:
        - backend:
            serviceName: nestos-service
            servicePort: 80
          path: /
